fix(gallery): add overflow hidden to prevent scrolling
Ensure the fixed gallery modal doesn't allow overflow beyond viewport.

--- a/assets/scss/_partial/_gallery.scss
+++ b/assets/scss/_partial/_gallery.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: var(--nav-height);
   z-index: var(--z-nav-gallery);
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
